initial site structure

--- a/index.html
+++ b/index.html
@@ -12,24 +12,65 @@
 
     <!-- beginning navigation -->
     <header>
-
+        <h1>
+            <a href="./">MALEK</a>
+          </h1>
+          <nav>
+            <ul>
+              <li>
+                <a href="#about-me">About Me</a>
+              </li>
+              <li>
+                <a href="#work">Work</a>
+              </li>
+              <li>
+                <a href="#contact-me">Contact Me</a>
+              </li>
+              <li>
+                <a href="#resume">Resume</a>
+              </li>
+            </ul>
+          </nav>
     </header>
     <!-- end navigation -->
 
-    <!-- beginning section 1 -->
-    <section>
-
-    </section>
-    <!-- end section 1 -->
-    
-    <!-- beginning footer -->
-    <footer>
-        <h2>❤️ Made with love by Malek Ben Jemia.</h2>
-        <div>
-          &copy; 2020 Malek Ben Jemia.
+    <!-- beginning hero-->
+    <section class="hero">
+        <div class="hero-title">
+            <h2>Result Driven & Self Starter</h2>
         </div>
-      </footer>
-      <!-- end footer -->
+    </section>
+    <!-- end hero -->
+    
+    <!-- beginning about me -->
+    <section class="category">
+        <div class="flex-row">
+            <h2 class="section-title">
+              About Me
+            </h2>
+        </div>
+    </section>
+    <!-- end about me -->
+
+    <!-- beginning work -->
+    <section>
+        <div class="flex-row">
+            <h2 class="section-title">
+              Work
+            </h2>
+        </div>
+    </section>
+    <!-- end work -->
+
+    <!-- beginning contact me -->
+    <section>
+        <div class="flex-row">
+            <h2 class="section-title">
+              Contact Me
+            </h2>
+        </div>
+    </section>
+    <!-- end contact me -->
 
   </body>
 
