--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <!-- beginning navigation -->
     <header>
         <h1>
-            <a href="./">MALEK</a>
-          </h1>
-          <nav>
+            <a href="./">Malek</a>
+        </h1>
+        <nav>
             <ul>
               <li>
                 <a href="#about-me">About Me</a>
@@ -30,7 +30,7 @@
                 <a href="#resume">Resume</a>
               </li>
             </ul>
-          </nav>
+        </nav>
     </header>
     <!-- end navigation -->
 
