beginning of the site content

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a href="#contact-me">Contact Me</a>
               </li>
               <li>
-                <a href="#resume">Resume</a>
+                <a href="./assets/images/resume.webp">Resume</a>
               </li>
             </ul>
         </nav>
@@ -36,38 +36,48 @@
 
     <!-- beginning hero-->
     <section class="hero">
-        <div class="hero-title">
+        <div>
             <h2>Result Driven & Self Starter</h2>
         </div>
     </section>
     <!-- end hero -->
     
     <!-- beginning about me -->
-    <section class="category">
+    <section id="about-me" class="category">
         <div class="flex-row">
             <h2 class="section-title">
-              About Me
+              About<br/>Me
             </h2>
+            <p>
+                With a Bachelor’s degree in Computer Science, Master’s degree in Information Technology, and hands-on experience using .Net languages to create and implement software applications, I am confident I will be an asset to your organization.
+                I enjoy being challenged and engaging with projects that require me to work outside my comfort and knowledge set, as continuing to learn new languages and development techniques are important to me and the success of your organization.
+            </p>
         </div>
     </section>
     <!-- end about me -->
 
     <!-- beginning work -->
-    <section>
+    <section id="work" class="category"> 
         <div class="flex-row">
             <h2 class="section-title">
               Work
             </h2>
+            <p>
+              butcher sel
+            </p>
         </div>
     </section>
     <!-- end work -->
 
     <!-- beginning contact me -->
-    <section>
+    <section id="contact-me" class="category">
         <div class="flex-row">
             <h2 class="section-title">
-              Contact Me
+              Contact<br/>Me
             </h2>
+            <p>
+              butcher sel
+            </p>
         </div>
     </section>
     <!-- end contact me -->
