--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
                       <div class="grid-item">
                         <h3>
-                            Serf Report<br/>MERN Stack
+                            <a href="https://swatch-makeup-reviews.herokuapp.com/">MVC</a>
                         </h3>
                       </div>
             
