--- a/index.html
+++ b/index.html
@@ -68,25 +68,25 @@
 
                       <div class="grid-item">
                         <h3>
-                            <a href="https://swatch-makeup-reviews.herokuapp.com/">MVC</a>
+                            <a href="https://swatch-makeup-reviews.herokuapp.com/">Swatch<br/>MVC</a>
                         </h3>
                       </div>
             
                       <div class="grid-item">
                         <h3>
-                            LED Wall <br/>Node/lot
+                            LED Wall <br/>Node/lot   
                         </h3>            
                       </div>
 
                       <div class="grid-item">
                         <h3>
-                            Calculator<br/>React/JavaScript/CSS
+                            <a href="https://dog-dash.herokuapp.com/">Walk My Dog<br/>React/JavaScript/CSS</a>
                         </h3>
                       </div>
             
                       <div class="grid-item">
                           <h3>
-                             <a href="https://uoft-project1-group5.github.io/cocktail-map/index.html">Cocktail Map<br/>Java Script</a>
+                             <a href="https://uoft-project1-group5.github.io/cocktail-map/index.html">Cocktail Map</br>Java Script</a>
                           </h3>
                       </div>
 
